--- a/2025_11_scientificPlots_Knowvember25.ipynb
+++ b/2025_11_scientificPlots_Knowvember25.ipynb
@@ -32,7 +32,7 @@
         "5. Figure size and layout\n",
         "6. Aspect ratio for spatial / geographic data\n",
         "7. Colour scales and colormaps\n",
-        "8. Colorblind- and grayscale-friendly maps\n",
+        "8. Colour-blind- and grayscale-friendly maps\n",
         "9. Consistency across multiple plots\n",
         "10. Exporting high-quality figures\n",
         "\n",
@@ -460,10 +460,11 @@
         "year_str_2   = timestamp_2.strftime(\"%Y\")\n"
       ],
       "metadata": {
-        "id": "RFdNzvqmJ5kY"
+        "id": "RFdNzvqmJ5kY",
+        "cellView": "form"
       },
       "id": "RFdNzvqmJ5kY",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -996,7 +997,7 @@
       "source": [
         "Discussion:\n",
         "- Grid lines improve readability\n",
-        "- Line styles can help repreent different types of data (e.g. uncertainty bounds), specially in grayscale/print contexts\n"
+        "- Line styles can help represent different types of data (e.g. uncertainty bounds), specially in grayscale/print contexts\n"
       ],
       "id": "K6M47s1EE_fz"
     },
@@ -1330,10 +1331,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 8 — Colorblind- and grayscale-friendly maps\n",
+        "# Step 8 — Colour-blind- and grayscale-friendly maps\n",
         "\n",
         "Goal:\n",
-        "- Ensure that visualizations remain clear and interpretable in grayscale and for viewers with CVD (color vision deficiencies).\n"
+        "- Ensure that visualizations remain clear and interpretable in grayscale and for viewers with CVD (colour vision deficiencies).\n"
       ],
       "metadata": {
         "id": "kW2X6LXouYiI"
@@ -1739,10 +1740,10 @@
         "umvYPAt4E_fn",
         "fCFt6IrcE_fq",
         "WYEZ6jeNE_fv",
+        "2T1a631LE_fx",
         "gCByMxYUE_fy",
         "tIrKonvUE_fz",
         "cZefks9yE_f0",
-        "kW2X6LXouYiI",
         "l_tgOxxnE_f1",
         "EZ3QKBhJE_f3"
       ],
