--- a/2025_11_scientificPlots_Knowvember25.ipynb
+++ b/2025_11_scientificPlots_Knowvember25.ipynb
@@ -1678,11 +1678,7 @@
         "    </table>\n",
         "    \"\"\",\n",
         "    raw=True\n",
-        ")\n",
-        "\n",
-        "# --- Display SVG inline ---\n",
-        "display_html(\"<h4>SVG version (vector, scalable):</h4>\", raw=True)\n",
-        "display(SVG(filename=\"temperature_figure.svg\"))"
+        ")"
       ],
       "id": "IrKvwCB-E_f4"
     },
@@ -1744,8 +1740,9 @@
         "gCByMxYUE_fy",
         "tIrKonvUE_fz",
         "cZefks9yE_f0",
-        "l_tgOxxnE_f1",
-        "EZ3QKBhJE_f3"
+        "kW2X6LXouYiI",
+        "qyKNB0yaYlRo",
+        "l_tgOxxnE_f1"
       ],
       "include_colab_link": true
     }
