--- a/2025_11_scientificPlots_Knowvember25_Comments.ipynb
+++ b/2025_11_scientificPlots_Knowvember25_Comments.ipynb
@@ -105,14 +105,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Installing libraries (click to expand) - Setup cell 1 of 4 (use when running the notebook for the first time)\n",
+        "# @title Installing libraries (click to expand) - Setup cell 1 of 4 (use when running the notebook in colab for the first time)\n",
         "\n",
         "# !pip install numpy matplotlib pandas geopandas xarray requests cmocean[plots]"
       ],
       "metadata": {
         "id": "z2zvfFnztn8Y",
-        "collapsed": true,
-        "cellView": "form"
+        "collapsed": true
       },
       "id": "z2zvfFnztn8Y",
       "execution_count": null,
