--- a/2025_11_scientificPlots_Knowvember25_codeOnly.ipynb
+++ b/2025_11_scientificPlots_Knowvember25_codeOnly.ipynb
@@ -59,6 +59,20 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# @title Installing libraries (click to expand) - use when running the notebook in colab for the first time\n",
+        "\n",
+        "# !pip install numpy matplotlib pandas geopandas xarray requests cmocean[plots]"
+      ],
+      "metadata": {
+        "id": "rbEKhhXyL8A7"
+      },
+      "id": "rbEKhhXyL8A7",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "id": "CgN7L4atE_fk",
       "cell_type": "code",
       "source": [
