--- a/2025_11_scientificPlots_Knowvember25_codeOnly.ipynb
+++ b/2025_11_scientificPlots_Knowvember25_codeOnly.ipynb
@@ -945,11 +945,12 @@
         "# -----------------------------\n",
         "# Figure 2: Equal aspect ratio (1:1 scale) - uncomment to try\n",
         "# -----------------------------\n",
-        "fig, ax = plt.subplots(figsize=(6, 6))\n",
-        "country.plot(ax=ax, edgecolor='black', facecolor='lightgray')\n",
-        "ax.set_title(\"Country outline (equal aspect)\")\n",
-        "ax.set_aspect('equal')  # Force 1:1 visual scale between X and Y axes\n",
-        "plt.show()\n"
+        "\n",
+        "# fig, ax = plt.subplots(figsize=(6, 6))\n",
+        "# country.plot(ax=ax, edgecolor='black', facecolor='lightgray')\n",
+        "# ax.set_title(\"Country outline (equal aspect)\")\n",
+        "# ax.set_aspect('equal')  # Force 1:1 visual scale between X and Y axes\n",
+        "# plt.show()\n"
       ],
       "metadata": {
         "id": "txMxQEJ61dcr",
@@ -1470,7 +1471,7 @@
         "\n",
         "# --- Save all formats ---\n",
         "fig.savefig(\"temperature_lowres.png\", dpi=100, bbox_inches=\"tight\")\n",
-        "fig.savefig(\"temperature_highres.png\", dpi=300, bbox_inches=\"tight\") # change to 300 dpi\n",
+        "fig.savefig(\"temperature_highres.png\", dpi=100, bbox_inches=\"tight\") # change to 300 dpi\n",
         "\n",
         "plt.close(fig)  # prevent re-display in notebook\n",
         "\n",
