--- a/2025_11_scientificPlots_Knowvember25_codeOnly.ipynb
+++ b/2025_11_scientificPlots_Knowvember25_codeOnly.ipynb
@@ -499,7 +499,7 @@
       "id": "WYEZ6jeNE_fv",
       "cell_type": "markdown",
       "source": [
-        "# Step 3 — Fonts and text readability\n"
+        "# Step 3 — Font size and font type\n"
       ],
       "metadata": {
         "id": "WYEZ6jeNE_fv"
@@ -847,7 +847,7 @@
         "# # Axes background\n",
         "# ax3.set_facecolor(bg_color)\n",
         "\n",
-        "# ax3.plot(x, y1_noisy, '-', color = 'k', linewidth=2, label='Oil')\n",
+        "# ax3.plot(x, y1_noisy, '-', color = 'g', linewidth=2, label='Oil')\n",
         "# ax3.plot(x, y2_noisy, '-', color = 'r', linewidth=2, label='Gas')\n",
         "# ax3.plot(x, (0.5 + 0.5*np.random.uniform(-1,1,size=x.shape))*y2_noisy, '-', color = 'r', linewidth=2, label='Gas Export')\n",
         "\n",
@@ -1503,29 +1503,6 @@
       },
       "outputs": [],
       "execution_count": null
-    },
-    {
-      "id": "2RgIVHqWE_f5",
-      "cell_type": "markdown",
-      "source": [
-        "# Final checklist\n",
-        "\n",
-        "Make sure that\n",
-        "\n",
-        "1. Axes are labelled with correct units.\n",
-        "2. Title and/or captions make the message easier to understand.\n",
-        "3. Font sizes are large enough to read on screen and in print.\n",
-        "4. Axis limits are intentional (not just autoscale).\n",
-        "5. Figure size and layout are clean and not crowded.\n",
-        "6. Aspect ratio is correct for spatial / map-style data.\n",
-        "7. Colormap is perceptually reasonable (no misleading rainbow).\n",
-        "8. Colormap is colorblind- and grayscale-friendly\n",
-        "9. When comparing two panels, the colour scale is consistent.\n",
-        "10. The figure is exported as high-quality PNG or vector — not a screenshot.\n"
-      ],
-      "metadata": {
-        "id": "2RgIVHqWE_f5"
-      }
     }
   ]
 }
